--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,60 @@
 .App {
   text-align: center;
+  background-color: #000;
+  color: grey;
 }
 
-
-
-
-.img {
+.title {
+   display: flex;
+    flex-flow: column;
+    text-align: center;
+}
+.img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 100px;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.title--h2 {
+  padding: 0;
+  margin: 2rem 0 0 0;
+}
+.title--p {
+  margin: 0 0 1rem 0;
 }
 
-
-
+.btn-l{
+  background-color: blue;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  margin-left: 12px;
+  width: 15%;
+}
+.btn-e{
+  background-color: #fff;
+  color: #000;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  margin-right: 12px;
+  width: 15%;
+}
+.btn-l:hover {
+  background: #e7e7e7;
+  color: blue;
+}
+.btn-e:hover {
+  background-color: #000;
+  color: blue;
+}
+.main{
+  padding-block: 10px;
+}
+.main--head{
+  display: flex;
+}
+.li{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;   
+}
